--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ dependencies:
 
   # Client for mavis. Keep it in a directory close to the rootfolder of this project. Or change accordingly.
   mavis_api_client:
-    path: ../mavisclient
+    git:
+      url: https://github.com/FUAUAB/Welly
+      ref: main
   image_picker: ^0.8.5
   photo_manager: ^2.0.4
   permission_handler: ^9.2.0
